<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/question_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/question_3_nr"
            style="@style/question_text" />

        <TextView
            android:text="@string/question_3"
            style="@style/question_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/q3a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_3" />
        </RadioGroup>

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_of_coffee"
            android:src="@drawable/cup" />


    </LinearLayout>
</LinearLayout>