<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/question_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/question_5_nr"
            style="@style/question_text" />

        <TextView
            android:text="@string/question_5"
            style="@style/question_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4" />

        <ImageView
            android:contentDescription="@string/picture_of_machina"
            android:src="@drawable/machina"
            style="@style/question_image" />
    </LinearLayout>
</LinearLayout>
