<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/question_margin_bottom"
    android:background="@drawable/bg_question"
    android:elevation="@dimen/question_elevation"
    android:orientation="vertical"
    android:padding="@dimen/question_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin_bottom"
            android:text="@string/question_1_nr"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/question_number_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_margin_bottom"
            android:text="@string/question_1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/question_number_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/q1a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_1_3" />
        </RadioGroup>

        <ImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_of_the_map"
            android:src="@drawable/map" />


    </LinearLayout>
</LinearLayout>